--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "graph build",
     "deploy": "graph deploy protofire/swarm-markets --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy:rinkeby": "graph deploy protofire/swarm-markets-rinkeby subgraph.rinkeby.yaml --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy:mumbai": "graph deploy protofire/swarm-markets-mumbai subgraph.mumbai.yaml --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy:local": "graph deploy protofire/swarm-markets subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
