--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -1,94 +1,34 @@
-name: Deploy Graph
+name: Deploy Stable Graphs
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  deploy-mainnet:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.22.8
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Codegen
-        run: yarn codegen
-      - name: Build
-        run: yarn build
-      - name: Deploy
-        env:
-          ACCESS_TOKEN: ${{secrets.THE_GRAPH_ACCESS_TOKEN}}
-          GITHUB_USERNAME: ${{github.repository_owner}}
-          SUBGRAPH_NAME: "trade-mainnet"
-          GRAPH_CONFIG_FILE: "subgraph.yaml"
-        run: yarn deploy
+  deploy-stable-mainnet:
+    uses: swarmmarkets/trade-subgraph/.github/workflows/graph.mainnet.yml@master
+    with:
+      SUBGRAPH_NAME: trade-mainnet
+    secrets:
+      GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-  deploy-rinkeby:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.22.8
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Codegen
-        run: yarn codegen
-      - name: Build
-        run: yarn build
-      - name: Deploy
-        env:
-          ACCESS_TOKEN: ${{secrets.THE_GRAPH_ACCESS_TOKEN}}
-          GITHUB_USERNAME: ${{github.repository_owner}}
-          SUBGRAPH_NAME: "trade-rinkeby"
-          GRAPH_CONFIG_FILE: "subgraph.rinkeby.yaml"
-        run: yarn deploy
+  deploy-stable-rinkeby:
+    uses: swarmmarkets/trade-subgraph/.github/workflows/graph.rinkeby.yml@master
+    with:
+      SUBGRAPH_NAME: trade-rinkeby
+    secrets:
+      GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-  #  deploy-matic:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v2
-  #      - name: Install node
-  #        uses: actions/setup-node@v1
-  #        with:
-  #          node-version: 12.22.8
-  #      - name: Install dependencies
-  #        run: yarn --frozen-lockfile
-  #      - name: Codegen
-  #        run: yarn codegen
-  #      - name: Build
-  #        run: yarn build
-  #      - name: Deploy
-  #        env:
-  #          ACCESS_TOKEN: ${{secrets.THE_GRAPH_ACCESS_TOKEN}}
-  #          GITHUB_USERNAME: ${{github.repository_owner}}
-  #          SUBGRAPH_NAME: "trade-polygon"
-  #          GRAPH_CONFIG_FILE: "subgraph.matic.yaml"
-  #        run: yarn deploy
+#  deploy-stable-polygon:
+#    uses: swarmmarkets/trade-subgraph/.github/workflows/graph.polygon.yml@master
+#    with:
+#      SUBGRAPH_NAME: trade-polygon
+#    secrets:
+#      GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-  deploy-mumbai:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.22.8
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Codegen
-        run: yarn codegen
-      - name: Build
-        run: yarn build
-      - name: Deploy
-        env:
-          ACCESS_TOKEN: ${{secrets.THE_GRAPH_ACCESS_TOKEN}}
-          GITHUB_USERNAME: ${{github.repository_owner}}
-          SUBGRAPH_NAME: "trade-mumbai"
-          GRAPH_CONFIG_FILE: "subgraph.mumbai.yaml"
-        run: yarn deploy
+  deploy-stable-mumbai:
+    uses: swarmmarkets/trade-subgraph/.github/workflows/graph.mumbai.yml@master
+    with:
+      SUBGRAPH_NAME: trade-mumbai
+    secrets:
+      GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
