--- a/.github/workflows/graph.mainnet.yml
+++ b/.github/workflows/graph.mainnet.yml
@@ -9,7 +9,7 @@ on:
       SUBGRAPH_NAME:
         default: trade-mainnet
         type: string
-        required: true
+        required: false
         description: Specify a subgraph name
 
   workflow_dispatch:
