--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -6,21 +6,21 @@ on:
 
 jobs:
   deploy-stable-mainnet:
-    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mainnet.yml@master
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mainnet.yml@main
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
   deploy-stable-rinkeby:
-    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.rinkeby.yml@master
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.rinkeby.yml@main
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
 #  deploy-stable-polygon:
-#    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@master
+#    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@main
 #    secrets:
 #      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
   deploy-stable-mumbai:
-    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mumbai.yml@master
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mumbai.yml@main
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
