--- a/.github/workflows/graph-beta.yml
+++ b/.github/workflows/graph-beta.yml
@@ -19,12 +19,12 @@ jobs:
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-#  deploy-beta-polygon:
-#    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@develop
-#    with:
-#      SUBGRAPH_NAME: trade-polygon-beta
-#    secrets:
-#      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
+  deploy-beta-polygon:
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@develop
+    with:
+      SUBGRAPH_NAME: trade-polygon-beta
+    secrets:
+      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
   deploy-beta-mumbai:
     uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mumbai.yml@develop
