--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -15,10 +15,10 @@ jobs:
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-#  deploy-stable-polygon:
-#    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@main
-#    secrets:
-#      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
+  deploy-stable-polygon:
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.polygon.yml@main
+    secrets:
+      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
   deploy-stable-mumbai:
     uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.mumbai.yml@main
