--- a/subgraph.rinkeby.yaml
+++ b/subgraph.rinkeby.yaml
@@ -50,6 +50,29 @@ dataSources:
       eventHandlers:
         - event: RegisterToken(indexed address,indexed address)
           handler: handleRegisterToken
+  - kind: ethereum/contract
+    name: dOTC
+    network: rinkeby
+    source:
+      address: "0x45E52Ad8fe37081094006906C7d0A6D2960A60fD"
+      abi: DOTCManager
+      startBlock: 9905001
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/dOTCmanager.ts
+      entities:
+        - Offers
+        - Orders
+      abis:
+        - name: DOTCManager
+          file: ./abis/DOTCManager.json
+      eventHandlers:
+        - event: CreatedOffer(uint256,address,address,address,uint256,uint256,uint8,address,bool)
+          handler: handleNewOffer
+        - event: CreatedOrder(uint256,uint256,uint256,address,uint256)
+          handler: handleNewOrder
 templates:
   - kind: ethereum/contract
     name: Pool
