--- a/.github/workflows/graph.mumbai.yml
+++ b/.github/workflows/graph.mumbai.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Codegen
+        env:
+          GRAPH_CONFIG_FILE: "subgraph.mumbai.yaml"
         run: yarn codegen
       - name: Build
         run: yarn build
