--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "create:local": "graph create swarmmarkets/trade-mainnet --node http://127.0.0.1:8020",
-    "codegen": "graph codegen --output-dir src/types/",
+    "codegen": "graph codegen --output-dir src/types/ $GRAPH_CONFIG_FILE",
     "build": "graph build",
     "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME $GRAPH_CONFIG_FILE --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
