--- a/subgraph.rinkeby.yaml
+++ b/subgraph.rinkeby.yaml
@@ -54,7 +54,7 @@ dataSources:
     name: dOTC
     network: rinkeby
     source:
-      address: "0xEc8f971a15d530a0966e49bDeC3470d8D3030eA0"
+      address: "0x01491B1589C7138F95ecc6E930d2c8c0fAC221Cf"
       abi: DOTCManager
       startBlock: 9938498
     mapping:
@@ -73,6 +73,10 @@ dataSources:
           handler: handleNewOffer
         - event: CreatedOrder(uint256,uint256,uint256,address,uint256)
           handler: handleNewOrder
+        - event: CompletedOffer(uint256)
+          handler: handleOfferCompleted
+        - event: CancledOffer(uint256,address,uint256)
+          handler: handleCanceledOffer
 templates:
   - kind: ethereum/contract
     name: Pool
