--- a/.github/workflows/graph.mumbai.yml
+++ b/.github/workflows/graph.mumbai.yml
@@ -27,19 +27,28 @@ jobs:
   deploy-mumbai:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install node
-        uses: actions/setup-node@v1
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v2
         with:
           node-version: 12.22.8
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - name: Codegen
+          cache: 'yarn'
+
+      - name: Install deps (with cache)
+        uses: bahmutov/npm-install@v1.4.5
+        with:
+          install-command: yarn --frozen-lockfile --silent
+
+      - name: Code Generation
         env:
           GRAPH_CONFIG_FILE: "subgraph.mumbai.yaml"
         run: yarn codegen
+
       - name: Build
         run: yarn build
+
       - name: Deploy
         env:
           ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
