feat: add asseblyscript loader for types and modified prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,8 +8,8 @@
         "newline-before-return": true,
         "no-duplicate-variable": [true, "check-parameters"],
         "no-var-keyword": true,
-        "printWidth": 100,
-        "semi": true,
+        "printWidth": 80,
+        "semi": false,
         "singleQuote": true,
         "tabWidth": 2,
         "trailingComma": "all",
