--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:with:env": "env-cmd yarn codegen",
     "deploy:with:env": "env-cmd yarn deploy",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "create:local": "env-cmd -x graph create \\$GITHUB_USERNAME/\\$SUBGRAPH_NAME --node http://127.0.0.1:8020",
+    "create:local": "graph create swarmmarkets/trade-mainnet --node http://127.0.0.1:8020",
     "lint": "eslint --max-warnings 0 . --ext .ts"
   },
   "devDependencies": {
@@ -17,6 +17,7 @@
     "@graphprotocol/graph-ts": "^0.20.1",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "assemblyscript": "^0.19.22",
     "env-cmd": "^10.1.0",
     "eslint": "7.31.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -24,6 +25,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@assemblyscript/loader": "^0.19.22",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0"
   }
