feat: add linting check before each deployment

--- a/.github/workflows/graph.mainnet.yml
+++ b/.github/workflows/graph.mainnet.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Lint
+        run: yarn lint
+
       - name: Deploy
         env:
           ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
