--- a/.github/workflows/graph.mumbai.yml
+++ b/.github/workflows/graph.mumbai.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Lint
+        run: yarn lint
+
       - name: Deploy
         env:
           ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
