--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "trade-subgraph",
   "version": "0.1.0",
   "scripts": {
-    "codegen": "graph codegen --output-dir src/types/ $GRAPH_CONFIG_FILE",
-    "build": "graph build $GRAPH_CONFIG_FILE",
-    "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME $GRAPH_CONFIG_FILE --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "codegen:with:env": "env-cmd yarn codegen",
-    "build:with:env": "env-cmd yarn codegen",
+    "prepare:config": "mustache config/$NETWORK.json subgraph.yaml.mustache > subgraph.yaml",
+    "codegen": "graph codegen --output-dir src/types/",
+    "build": "graph build",
+    "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "prepare:config:env": "env-cmd yarn prepare:config",
     "deploy:with:env": "env-cmd yarn deploy",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "create:local": "graph create swarmmarkets/trade-mainnet --node http://127.0.0.1:8020",
@@ -21,6 +21,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "7.31.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mustache": "^4.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
