feat: integrate config generation with github workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           install-command: yarn --frozen-lockfile --silent
 
+      - name: Generate configuration file
+        env:
+          NETWORK: mainnet
+        run: yarn generate:config
+
       - name: Code Generation
         run: yarn codegen
 
