--- a/subgraph.rinkeby.yaml
+++ b/subgraph.rinkeby.yaml
@@ -69,13 +69,13 @@ dataSources:
         - name: DOTCManager
           file: ./abis/DOTCManager.json
       eventHandlers:
-        - event: CreatedOffer(uint256,address,address,address,uint256,uint256,uint8,address,bool,uint256)
+        - event: CreatedOffer(indexed uint256,indexed address,address,address,uint256,uint256,uint8,address,bool,uint256)
           handler: handleNewOffer
-        - event: CreatedOrder(uint256,uint256,uint256,address,uint256)
+        - event: CreatedOrder(indexed uint256,indexed uint256,uint256,indexed address,uint256)
           handler: handleNewOrder
         - event: CompletedOffer(uint256)
           handler: handleOfferCompleted
-        - event: CanceledOffer(uint256,address,uint256)
+        - event: CanceledOffer(indexed uint256,address,uint256)
           handler: handleCanceledOffer
 templates:
   - kind: ethereum/contract
