--- a/.github/workflows/check-pr-title.yml
+++ b/.github/workflows/check-pr-title.yml
@@ -1,8 +1,9 @@
 name: "Lint PR Title"
 
 on:
-  pull_request_target:
+  pull_request:
     types:
+      - reopened
       - opened
       - edited
       - synchronize
@@ -12,8 +13,6 @@ jobs:
     name: Check PR Title
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v3.6.0
+      - uses: Slashgear/action-check-pr-title@v3.0.0
         with:
-          subjectPattern: ^SM-[0-9]{1,4}\s\|\s(([a-z]*))(?:\(([\w\$\.\-\* ]*)\))?\:\s(.*)$
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          subjectPattern: '^SM-[0-9]{1,4}\s\|\s(([a-z]*))(?:\(([\w\$\.\-\* ]*)\))?\:\s(.*)$'
