--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "trade-subgraph",
   "version": "0.2.0",
   "scripts": {
-    "generate:config": "echo $NETWORK && mustache config/$NETWORK.json subgraph.yaml.mustache > subgraph.yaml",
+    "generate:config": "echo %NETWORK% && mustache config/%NETWORK%.json subgraph.yaml.mustache > subgraph.yaml",
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy": "graph deploy --access-token %ACCESS_TOKEN% %GITHUB_USERNAME%/%SUBGRAPH_NAME% --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "generate:config:env": "env-cmd yarn generate:config",
     "deploy:with:env": "env-cmd yarn deploy",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
