--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "generate:config": "echo $NETWORK && mustache config/$NETWORK.json subgraph.yaml.mustache > subgraph.yaml",
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
-    "deploy": "graph deploy --access-token %ACCESS_TOKEN% %GITHUB_USERNAME%/%SUBGRAPH_NAME% --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "generate:config:env": "env-cmd yarn generate:config",
     "deploy:with:env": "env-cmd yarn deploy",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.20.0",
     "@graphprotocol/graph-ts": "^0.20.1",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "assemblyscript": "^0.19.23",
     "env-cmd": "^10.1.0",
     "eslint": "8.10.0",
