--- a/.github/workflows/graph.mainnet.yml
+++ b/.github/workflows/graph.mainnet.yml
@@ -59,5 +59,5 @@ jobs:
         env:
           ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
           GITHUB_USERNAME: ${{ github.repository_owner }}
-          SUBGRAPH_NAME: ${{ inputs.SUBGRAPH_NAME }}${{ github.event.inputs.SUBGRAPH_NAME }}
+          SUBGRAPH_NAME: ${{ inputs.SUBGRAPH_NAME }}
         run: yarn deploy
