--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Those variables will be used in npm scripts for deployment from local
-NETWORK= #One from the list: mainnet, rinkeby, matic, mumbai
+NETWORK= #One from the list: mainnet, rinkeby, goerli, matic, mumbai
 ACCESS_TOKEN=
 GITHUB_USERNAME=
 SUBGRAPH_NAME=
