feat: uncomment goerli in github workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-#        network: [ rinkeby, goerli, mumbai, mainnet, matic ]
-        network: [ rinkeby, mumbai, mainnet, matic ]
+        network: [ rinkeby, goerli, mumbai, mainnet, matic ]
 
     steps:
       - name: Checkout the code
