--- a/.github/workflows/graph.yml
+++ b/.github/workflows/graph.yml
@@ -32,9 +32,9 @@ jobs:
     secrets:
       THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
 
-#  deploy-stable-goerli:
-#    name: Ethereum Goerli
-#    needs: deploy-stable-mumbai
-#    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.goerli.yml@main
-#    secrets:
-#      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
+  deploy-stable-goerli:
+    name: Ethereum Goerli
+    needs: deploy-stable-mumbai
+    uses: SwarmMarkets/trade-subgraph/.github/workflows/graph.goerli.yml@main
+    secrets:
+      THE_GRAPH_ACCESS_TOKEN: ${{ secrets.THE_GRAPH_ACCESS_TOKEN }}
