--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
     "deploy": "graph deploy --access-token $ACCESS_TOKEN $GITHUB_USERNAME/$SUBGRAPH_NAME --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "generate:config:env": "env-cmd yarn generate:config",
-    "deploy:with:env": "env-cmd yarn deploy",
+    "_:generate:config": "env-cmd yarn generate:config",
+    "_:deploy": "env-cmd yarn deploy",
     "deploy:local": "graph deploy swarmmarkets/trade-mainnet subgraph.yaml --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "create:local": "graph create swarmmarkets/trade-mainnet --node http://127.0.0.1:8020",
     "lint": "eslint --max-warnings 0 . --ext .ts"
